# tuit

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  main.rs  tree_browser.rs
src/input/: mod.rs
src/theme/: catppuccin.rs  dracula.rs  gruvbox.rs  mod.rs  nord.rs  tokyo_night.rs
src/transfer/: mod.rs  receiver.rs  sender.rs
src/ui/: layout.rs  mod.rs
src/ui/screens/: active.rs  history.rs  mod.rs  receive.rs  send.rs
src/ui/widgets/: mod.rs  progress.rs  transfer_item.rs
